homelab/it-tools/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: it-tools
  annotations:
    argocd.argoproj.io/sync-wave: "0"
